--- a/conf/model/alternate-ensemble[pry46jiv,uubbpt64].yaml
+++ b/conf/model/alternate-ensemble[pry46jiv,uubbpt64].yaml
@@ -3,7 +3,9 @@ defaults:
   - _self_
 
 x_sys:
-
+  steps:
+    - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
+      years: [ "2024" ]
 y_sys:
 
 train_sys:
@@ -20,20 +22,15 @@ train_sys:
            _target_: functools.partial
            _args_:
              - _target_: hydra.utils.get_class
-               path: torchaudio.transforms.MelSpectrogram #nnAudio.features.mel.MelSpectrogram
-          output_shape: [256, 256]
+               path: torchaudio.transforms.MelSpectrogram
+          output_shape: [224, 224]
           scale:
             _target_: src.modules.training.datasets.to_2d.spec_normalize.SpecNormalize
-
-        #  _target_: src.modules.training.datasets.to_2d.reshape.Reshape
-        #  shape: [400,400]
         labeler:
           _target_: src.modules.training.datasets.labeler.psd_labeler.PSDLabeler
         filter_:
           _target_: src.modules.training.datasets.filter.grade_threshold.GradeThreshold
           threshold: 0
-        process_delayed:
-          - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
         aug_1d:
           _target_: epochalyst.pipeline.model.training.augmentation.utils.CustomSequential
           x_transforms:
@@ -49,16 +46,11 @@ train_sys:
               p: 0.5
         aug_2d:
           _target_: epochalyst.pipeline.model.training.augmentation.utils.CustomSequential
-          x_transforms:
-            - _target_: kornia.augmentation.RandomErasing
-              p: 0.25
           xy_transforms:
             - _target_: epochalyst.pipeline.model.training.augmentation.image_augmentations.CutMix
-              p: 1
-            - _target_: epochalyst.pipeline.model.training.augmentation.image_augmentations.MixUp
-              p: 0.8
+              p: 0.5
       dataloader_args:
-        num_workers: 16
+        num_workers: 8
         prefetch_factor: 2
         persistent_workers: false
       n_folds: 0 # 0 for train full,
@@ -89,6 +81,6 @@ train_sys:
           - _target_: hydra.utils.get_class
             path: torch.optim.AdamW
         lr: 1e-4
+    - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
     - _target_: src.modules.training.postprocessing.smooth_file.SmoothFile
       smooth_factor: 0.75
-    - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
