--- a/conf/model/ancient-rain-721.yaml
+++ b/conf/model/ancient-rain-721.yaml
@@ -25,8 +25,8 @@ train_sys:
           - _target_: hydra.utils.get_class
             path: torchaudio.transforms.MelSpectrogram
         output_shape:
-        - 224
-        - 224
+        - 256
+        - 256
         scale:
           _target_: src.modules.training.datasets.to_2d.spec_normalize.SpecNormalize
       labeler:
@@ -55,23 +55,23 @@ train_sys:
     dataloader_args:
       num_workers: 8
       prefetch_factor: 2
-      persistent_workers: false
+      persistent_workers: true
     n_folds: 5
-    epochs: 50
+    epochs: 75
     patience: 15
     batch_size: 64
     model:
       _target_: src.modules.training.models.timm.Timm
       in_channels: 1
       out_channels: 182
-      model_name: convnext_tiny
+      model_name: eca_nfnet_l0
       activation: sigmoid
     scheduler:
       _target_: functools.partial
       _args_:
       - _target_: hydra.utils.get_class
         path: timm.scheduler.cosine_lr.CosineLRScheduler
-      warmup_t: 3
+      warmup_t: 2
       warmup_lr_init: 1.0e-05
       t_initial: 50
       cycle_limit: 1
@@ -82,10 +82,8 @@ train_sys:
       _args_:
       - _target_: hydra.utils.get_class
         path: torch.optim.AdamW
-      lr: 0.0005
+      lr: 0.0001
   - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
-  - _target_: src.modules.training.postprocessing.smooth_file.SmoothFile
-    smooth_factor: 0.75
 pred_sys:
   _target_: src.modules.transformation.verbose_transformation_pipeline.VerboseTransformationPipeline
   title: Postprocessing pipeline
