--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_train
   - hydra/logging
-  - model: convnext-post-2024-google # Add models or ensembles
+  - model: convnext-post-2024google-silences-birds # Add models or ensembles
   - wandb: train
 
 ###############
@@ -12,7 +12,7 @@ defaults:
 processed_path: data/processed/
 raw_path: data/raw/
 
-years: [ "2024", "2024google"]
+years: [ "2024", "2024gbird", "2024gsil"]
 cache_path: data/cache
 #data_path: data/raw/train_data/dummy.npy
 data_path: data/raw/2024/train_audio/
@@ -37,6 +37,6 @@ splitter:
   shuffle: true
   random_state: 42
 
-  years: [ "2024", "2024google"]
+  years: [ "2024", "2024gbird", "2024gsil"]
 
 allow_multiple_instances: true
