--- a/conf/model/energy_cutmix.yaml
+++ b/conf/model/energy_cutmix.yaml
@@ -3,9 +3,7 @@ defaults:
   - _self_
 
 x_sys:
-  steps:
-    - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
-      years: ["2024"]
+
 y_sys:
 
 train_sys:
@@ -34,24 +32,18 @@ train_sys:
         filter_:
           _target_: src.modules.training.datasets.filter.grade_threshold.GradeThreshold
           threshold: 0
+        process_delayed:
+          - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
+          - _target_: src.modules.transformation.x.rescale.Rescale
         aug_1d:
           _target_: epochalyst.pipeline.model.training.augmentation.utils.CustomSequential
           x_transforms:
-            - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.RandomPhaseShift
-              p: 0.5
-              shift_limit: 0.5
-            - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.RandomAmplitudeShift
-              p: 0.5
+
           xy_transforms:
-            - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.CutMix1D
-              p: 0.5
-            - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.MixUp1D
-              p: 0.5
-        aug_2d:
-          _target_: epochalyst.pipeline.model.training.augmentation.utils.CustomSequential
-          xy_transforms:
-            - _target_: epochalyst.pipeline.model.training.augmentation.image_augmentations.CutMix
-              p: 0.5
+            - _target_: src.modules.training.augmentations.time_series_augmentations.EnergyCutmix
+              p: 1
+
+
       dataloader_args:
         num_workers: 16
         prefetch_factor: 1
@@ -83,4 +75,3 @@ train_sys:
           - _target_: hydra.utils.get_class
             path: torch.optim.AdamW
         lr: 5e-4
-    - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
