--- a/conf/model/eff_b0_300.yaml
+++ b/conf/model/eff_b0_300.yaml
@@ -25,8 +25,8 @@ train_sys:
           - _target_: hydra.utils.get_class
             path: torchaudio.transforms.MelSpectrogram
         output_shape:
-        - 224
-        - 224
+        - 300
+        - 300
         scale:
           _target_: src.modules.training.datasets.to_2d.spec_normalize.SpecNormalize
       labeler:
@@ -64,7 +64,7 @@ train_sys:
       _target_: src.modules.training.models.timm.Timm
       in_channels: 1
       out_channels: 182
-      model_name: convnext_tiny
+      model_name: efficientnet_b0
       activation: sigmoid
     scheduler:
       _target_: functools.partial
@@ -83,9 +83,9 @@ train_sys:
       - _target_: hydra.utils.get_class
         path: torch.optim.AdamW
       lr: 0.0005
-  - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
   - _target_: src.modules.training.postprocessing.smooth_file.SmoothFile
     smooth_factor: 0.75
+  - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
 pred_sys:
   _target_: src.modules.transformation.verbose_transformation_pipeline.VerboseTransformationPipeline
   title: Postprocessing pipeline
