--- a/conf/model/convnext-post-multiply-mean.yaml
+++ b/conf/model/convnext-post-multiply-mean.yaml
@@ -25,8 +25,8 @@ train_sys:
           - _target_: hydra.utils.get_class
             path: torchaudio.transforms.MelSpectrogram
         output_shape:
-        - 50
-        - 50
+        - 224
+        - 224
         scale:
           _target_: src.modules.training.datasets.to_2d.spec_normalize.SpecNormalize
       labeler:
@@ -57,14 +57,14 @@ train_sys:
       prefetch_factor: 2
       persistent_workers: false
     n_folds: 5
-    epochs: 5
-    patience: 14
+    epochs: 50
+    patience: 15
     batch_size: 64
     model:
       _target_: src.modules.training.models.timm.Timm
       in_channels: 1
       out_channels: 182
-      model_name: efficientnet_b0
+      model_name: convnext_tiny
       activation: sigmoid
     scheduler:
       _target_: functools.partial
@@ -83,8 +83,7 @@ train_sys:
       - _target_: hydra.utils.get_class
         path: torch.optim.AdamW
       lr: 0.0005
-  - _target_: src.modules.training.postprocessing.smooth_file.SmoothFile
-    smooth_factor: 0.75
+  - _target_: src.modules.training.postprocessing.multiply_mean.MultiplyMean
   - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
 pred_sys:
   _target_: src.modules.transformation.verbose_transformation_pipeline.VerboseTransformationPipeline
