Update MyPy configuration

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,8 @@
 [mypy]
 plugins = numpy.typing.mypy_plugin
 
+ignore_missing_imports = True
+
 disallow_untyped_defs = True
 
 warn_redundant_casts = True
