--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -66,31 +66,21 @@ repos:
     rev: v1.10.0
     hooks:
       - id: mypy
-        additional_dependencies:  # TODO(Jeffrey): Auto-update this list based on pyproject.toml or requirements-dev.lock
-          - numpy==1.26.3
+        additional_dependencies:
+          - numpy==1.26.4
           - pandas-stubs>=2.2.2.240514
-          - scikit-learn==1.4.2
           - types-tqdm>=4.66.0.20240417
-          - epochalyst==0.3.2
           - types-seaborn>=0.13.2.20240417
           - matplotlib==3.8.4
-          - plotly==5.22.0
           - torch==2.2.2
-          - torchvision==0.17.2
-          - torchaudio==2.2.2
           - dask==2024.5.0
           - typing_extensions==4.9.0
           - annotated-types==0.6.0
           - hydra-core==1.3.2
           - wandb==0.17.0
-          - randomname==0.2.1
-          - coloredlogs==15.0.1
           - librosa==0.10.2
           - onnx==1.16.0
-          - onnxruntime==1.17.3
           - kornia==0.7.2
-          - timm==0.9.16
         args:
           - "--fast-module-lookup"
           - "--disallow-any-generics"
-          - "--disable-error-code=import-untyped"
