--- a/conf/model/energy_cutmix.yaml
+++ b/conf/model/energy_cutmix.yaml
@@ -9,7 +9,7 @@ y_sys:
 train_sys:
   steps:
     - _target_: src.modules.training.main_trainer.MainTrainer
-      year: "2024"
+      year: "union_2024_kenya"
       dataset_args:
         sampler:
           _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
@@ -38,11 +38,16 @@ train_sys:
         aug_1d:
           _target_: epochalyst.pipeline.model.training.augmentation.utils.CustomSequential
           x_transforms:
-
+            - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.RandomPhaseShift
+              p: 0.5
+              shift_limit: 0.5
+            - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.RandomAmplitudeShift
+              p: 0.5
           xy_transforms:
             - _target_: src.modules.training.augmentations.time_series_augmentations.EnergyCutmix
-              p: 1
-
+              p: 0.5
+            - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.MixUp1D
+              p: 0.5
 
       dataloader_args:
         num_workers: 16
@@ -55,7 +60,7 @@ train_sys:
       model:
         _target_: src.modules.training.models.timm.Timm #Ensure that activation is sigmoid for non Logits loss functions.
         in_channels: 1
-        out_channels: 182
+        out_channels: 351
         model_name: "convnext_tiny"
         activation: "sigmoid"
       scheduler:
@@ -75,3 +80,5 @@ train_sys:
           - _target_: hydra.utils.get_class
             path: torch.optim.AdamW
         lr: 5e-4
+    - _target_: src.modules.training.postprocessing.keep_2024_species.Keep2024Species
+    - _target_: src.modules.training.postprocessing.visualize_preds.VisualizePreds
