--- a/conf/model/double_loss_model.yaml
+++ b/conf/model/double_loss_model.yaml
@@ -6,14 +6,15 @@ x_sys:
   steps:
   - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
     years:
-    - '2023'
+    - '2024'
     - 'kenya'
 y_sys: null
 train_sys:
   _target_: src.modules.training.verbose_training_pipeline.VerboseTrainingPipeline
   steps:
   - _target_: src.modules.training.double_trainer.DoubleTrainer
-    years: ['2023', 'kenya']
+    years: ['2024', 'kenya']
+    lambda_: 0.01
     dataset_args:
       sampler:
         _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
@@ -35,10 +36,18 @@ train_sys:
       filter_:
         _target_: src.modules.training.datasets.filter.grade_threshold.GradeThreshold
         threshold: 0
+      aug_1d:
+          _target_: epochalyst.pipeline.model.training.augmentation.utils.CustomSequential
+          x_transforms:
+            - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.RandomPhaseShift
+              p: 0.5
+              shift_limit: 0.5
+            - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.RandomAmplitudeShift
+              p: 0.5
 
     dataloader_args:
-      num_workers: 8
-      prefetch_factor: 2
+      num_workers: 16
+      prefetch_factor: 1
       persistent_workers: false
     n_folds: 5
     epochs: 50
@@ -49,7 +58,7 @@ train_sys:
       model:
         _target_: src.modules.training.models.timm.Timm
         in_channels: 1
-        out_channels: 266
+        out_channels: 184
         model_name: convnext_tiny
         activation: sigmoid
     scheduler:
