--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -11,7 +11,7 @@ defaults:
 ###############
 processed_path: data/processed/
 raw_path: data/raw/
-years: ["2023", 'kenya']
+years: ["2024", 'kenya']
 cache_path: data/cache
 #data_path: data/raw/train_data/dummy.npy
 data_path: data/raw/2024/train_audio/
@@ -21,7 +21,7 @@ metadata_path: data/raw/2024/train_metadata.csv
 test_size: 0.2
 
 scorer:
-  _target_: src.scoring.rocauc_years.ROCAUC # Add scorer
+  _target_: src.scoring.double_headed_rocauc_years.ROCAUC # Add scorer
   name: rocauc
   grade_threshold: 0
   only_primary: true
@@ -35,5 +35,5 @@ splitter:
   n_splits: 5 # Set to 0 if you want train full.
   shuffle: true
   random_state: 42
-  years: ["2023", 'kenya']
+  years: ["2024", 'kenya']
 allow_multiple_instances: true
