--- a/conf/model/fdy_sed.yaml
+++ b/conf/model/fdy_sed.yaml
@@ -25,8 +25,8 @@ train_sys:
           - _target_: hydra.utils.get_class
             path: torchaudio.transforms.MelSpectrogram
         output_shape:
-        - 224
-        - 224
+        - 128
+        - 256
         scale:
           _target_: src.modules.training.datasets.to_2d.spec_normalize.SpecNormalize
       labeler:
@@ -59,20 +59,38 @@ train_sys:
     n_folds: 5
     epochs: 50
     patience: 15
-    batch_size: 64
+    batch_size: 128
     model:
       _target_: src.modules.training.models.fdy_sed.CRNN
       n_input_ch: 1
       n_class: 182
+      n_RNN_cell: 256
+      n_RNN_layer: 2
+      rec_dropout: 0
+      attention: class                      # time / class
+
+      activation: cg
+      conv_dropout: 0.5
+      kernel: [ 3, 3, 3, 3, 3, 3, 3 ]
+      pad: [ 1, 1, 1, 1, 1, 1, 1 ]
+      stride: [ 1, 1, 1, 1, 1, 1, 1 ]
+      n_filt: [ 32, 64, 128, 256, 256, 256, 256 ]
+      pooling: [ [ 2, 2 ], [ 2, 2 ], [ 1, 2 ], [ 1, 2 ], [ 1, 2 ], [ 1, 2 ], [ 1, 2 ] ]
+
+      n_basis_kernels: 4
+      DY_layers: [ 0, 1, 1, 1, 1, 1, 1 ]
+      temperature: 31
+      pool_dim: time                       # leave time: "freq", pool time "time", pool both: "both"
+
     scheduler:
-      _target_: functools.partial
-      _args_:
-      - _target_: hydra.utils.get_class
-        path: timm.scheduler.cosine_lr.CosineLRScheduler
-      warmup_t: 3
-      warmup_lr_init: 1.0e-05
-      t_initial: 50
-      cycle_limit: 1
+      # _target_: functools.partial
+      # _args_:
+      # - _target_: hydra.utils.get_class
+      #   path: timm.scheduler.cosine_lr.CosineLRScheduler
+      # warmup_t: 50
+      # warmup_lr_init: 1.0e-05
+      # t_initial: 200
+      # cycle_limit: 1
     criterion:
       _target_: torch.nn.BCELoss
     optimizer:
@@ -80,9 +98,9 @@ train_sys:
       _args_:
       - _target_: hydra.utils.get_class
         path: torch.optim.AdamW
-      lr: 0.0005
-  - _target_: src.modules.training.postprocessing.smooth_file.SmoothFile
-    smooth_factor: 0.75
+      lr: 1e-5
+  # - _target_: src.modules.training.postprocessing.smooth_file.SmoothFile
+  #   smooth_factor: 0.75
 pred_sys:
   _target_: src.modules.transformation.verbose_transformation_pipeline.VerboseTransformationPipeline
   title: Postprocessing pipeline
