--- a/conf/model/fdy_sed.yaml
+++ b/conf/model/fdy_sed.yaml
@@ -34,32 +34,60 @@ train_sys:
       filter_:
         _target_: src.modules.training.datasets.filter.grade_threshold.GradeThreshold
         threshold: 0
+      process_delayed:
+        - _target_: src.modules.transformation.x.rescale.Rescale
       aug_1d:
         _target_: epochalyst.pipeline.model.training.augmentation.utils.CustomSequential
         x_transforms:
-        - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.RandomPhaseShift
-          p: 0.5
-          shift_limit: 0.5
+      #   - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.RandomPhaseShift
+      #     p: 0.5
+      #     shift_limit: 0.5
         - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.RandomAmplitudeShift
           p: 0.5
+        - _target_: src.modules.training.augmentations.audiomentations_compose.AudiomentationsCompose
+          compose: 
+            _target_: audiomentations.Compose
+            transforms:
+            - _target_: audiomentations.PolarityInversion
+              p: 0.5
+
+            - _target_: audiomentations.AddBackgroundNoise
+              p: 0.5
+              sounds_path: /home/tolga/Documents/q4-bird-clef/data/raw/esc50/audio/
+              min_snr_db: -3.0
+              max_snr_db: 3.0
+              noise_transform: 
+                _target_: audiomentations.PolarityInversion
+                p: 0.5
+
+            - _target_: audiomentations.AddColorNoise
+              p: 0.5
+              min_snr_db: -3.0
+              max_snr_db: 3.0
+            - _target_: audiomentations.PitchShift
+              p: 0.5
+
+            - _target_: audiomentations.Shift
+              p: 0.5
+
         xy_transforms:
-        - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.CutMix1D
+        - _target_: src.modules.training.augmentations.time_series_augmentations.EnergyCutmix
           p: 0.5
         - _target_: epochalyst.pipeline.model.training.augmentation.time_series_augmentations.MixUp1D
           p: 0.5
       aug_2d:
         _target_: epochalyst.pipeline.model.training.augmentation.utils.CustomSequential
         xy_transforms:
-        - _target_: epochalyst.pipeline.model.training.augmentation.image_augmentations.CutMix
+        - _target_: epochalyst.pipeline.model.training.augmentation.image_augmentations.MixUp
           p: 0.5
     dataloader_args:
-      num_workers: 8
-      prefetch_factor: 2
+      num_workers: 16
+      prefetch_factor: 1
       persistent_workers: false
     n_folds: 5
     epochs: 50
     patience: 15
-    batch_size: 128
+    batch_size: 64
     model:
       _target_: src.modules.training.models.fdy_sed.CRNN
       n_input_ch: 1
@@ -92,13 +120,13 @@ train_sys:
       # t_initial: 200
       # cycle_limit: 1
     criterion:
-      _target_: torch.nn.BCELoss
+      _target_: src.modules.training.losses.asymmetric_focal_loss.AsymmetricalFocalLoss
     optimizer:
       _target_: functools.partial
       _args_:
       - _target_: hydra.utils.get_class
         path: torch.optim.AdamW
-      lr: 1e-5
+      lr: 1e-3
   # - _target_: src.modules.training.postprocessing.smooth_file.SmoothFile
   #   smooth_factor: 0.75
 pred_sys:
