--- a/conf/train.yaml
+++ b/conf/train.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_train
   - hydra/logging
-  - model: eca_l0
+  - model: convnext-post-add  # Add models or ensembles
   - wandb: train
 
 ###############
@@ -11,14 +11,18 @@ defaults:
 ###############
 processed_path: data/processed/
 raw_path: data/raw/
-years: ["2024"]
+
+years: [ "2024", "2024add" ]
 cache_path: data/cache
-#data_path: data/raw/train_data/dummy.npy
+
 data_path: data/raw/2024/train_audio/
 metadata_path: data/raw/2024/train_metadata.csv
 
 # Do this if you want train full.
 test_size: 0.2
+
+# Species cap
+max_recordings_per_species: 500
 
 scorer:
   _target_: src.scoring.rocauc_years.ROCAUC # Add scorer
@@ -35,5 +39,5 @@ splitter:
   n_splits: 5 # Set to 0 if you want train full.
   shuffle: true
   random_state: 42
-  years: ["2024"]
+  years: [ "2024", "2024add" ]
 allow_multiple_instances: true
