--- a/conf/cv.yaml
+++ b/conf/cv.yaml
@@ -1,7 +1,7 @@
 defaults:
   - base_cv
   - hydra/logging
-  - model: b0_aug # Add models or ensembles
+  - model: convnext # Add models or ensembles
   - wandb: train
 
 ###############
@@ -12,7 +12,7 @@ defaults:
 processed_path: data/processed/
 raw_path: data/raw/
 cache_path: data/cache
-years: ["2023", "2024"]
+years: ["2024"]
 #data_path: data/raw/train_data/dummy.npy
 data_path: data/raw/2024/train_audio/
 metadata_path: data/raw/2024/train_metadata.csv
@@ -31,5 +31,5 @@ splitter:
   n_splits: 5 # Set to 0 if you want train full.
   shuffle: true
   random_state: 42
-  years: ["2023","2024"]
+  years: ["2024"]
 allow_multiple_instances: true
