--- a/conf/model/b0_aug.yaml
+++ b/conf/model/b0_aug.yaml
@@ -5,7 +5,7 @@ defaults:
 x_sys:
   steps:
     - _target_: src.modules.transformation.x.nan_to_zero.NanToZero
-      years: ["kenya"]
+      years: ["2024"]
 y_sys:
 
 train_sys:
@@ -17,7 +17,7 @@ train_sys:
           _target_: src.modules.training.datasets.sampler.crop_or_pad.CropOrPad
           length: 160000
         to_2d:
-          _target_: src.modules.training.datasets.to_2d.rgb_spec.Spec
+          _target_: src.modules.training.datasets.to_2d.spec.Spec
           spec:
            _target_: functools.partial
            _args_:
@@ -63,14 +63,14 @@ train_sys:
         num_workers: 16
         prefetch_factor: 1
         persistent_workers: false
-      n_folds: 5 # 0 for train full,
-      epochs: 50
+      n_folds: 3 # 0 for train full,
+      epochs: 1
       patience: 14
       batch_size: 128
       model:
         _target_: src.modules.training.models.timm.Timm #Ensure that activation is sigmoid for non Logits loss functions.
         in_channels: 1
-        out_channels: 176
+        out_channels: 182
         model_name: "efficientnet_b0"
         activation: "sigmoid"
       scheduler:
